# yt-embed

./: .gitignore  README.md  pyproject.toml  yt-embed.config
src/yt_embed/: config.py  db.py  main.py  models.py  routes.py
src/yt_embed/download/: ytdlp.py
templates/: audio.html  video.html
