[project]
name = "yt-embed"
version = "0.1.0"
description = "Link based Youtube audio/video proxy like `fixupx` for Discord and Slack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.scripts]
yt-embed = "yt_embed.main:entry"

[tool.setuptools.packages.find]
where = ["src"]
